# uav_sparse

./: .gitignore  02_MarginSearch_Narrative.md  README.md  README_zh.md  RQ1_WORKPLAN.md  pyproject.toml
artifacts/: README.md  seed_replication_distinct_costs.csv  seed_replication_summary.json
artifacts/alt_drift_summary/: arm_purity.csv
artifacts/cascade_recheck_summary/: spotcheck_safe.csv  survivors.csv
artifacts/cross_coupling_summary/: arm_purity_tier2.csv  candidates.csv  cross_coupling_report.md  stepA_query_repeats.csv
artifacts/direction_a_ddmin_px4_position_seed0_v1/: README.md
artifacts/direction_a_px4_position_seed0_v0/: README.md
artifacts/margin_stage0_v1/: README.md
artifacts/margin_stage1_redo_v1/: README.md
configs/: rq1_minimal.yaml  synthetic_sanity.yaml
docs/: 01_Research_Narrative_CADET.md  CADET_工作全景梳理.md  MANTIS_px4_headroom_boundary_plan.md
legacy/: README_zh.md  requirements.txt  setup.py
planc/: README.md  requirements.txt
recon_v0/: prereg_contracts.md  summary.md  survivors.csv  theta_build_profiles.csv  transition_exploratory_v2_summary.json
scripts/: curate_results_checkpoint.py  seed_replication_summary.py  start_px4.sh
tests/: test_direction_a_ddmin.py  test_direction_a_probe.py  test_fd_on_synthetic.py  test_h3_transition.py  test_input_model.py  test_mantis_boundary.py  test_mantis_maneuvers.py  test_mantis_mode_harness.py  test_mantis_tracking_contracts.py  test_metrics.py  test_properties.py  test_px4_param_overrides.py  test_route1_h2_campaign.py  test_transition_handoff_v2.py  test_violation_search.py
(+3501 files in other folders)
